chore: rename project to lotso_app

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "dicoding1" "\0"
+            VALUE "FileDescription", "lotso_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "dicoding1" "\0"
+            VALUE "InternalName", "lotso_app" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "dicoding1.exe" "\0"
-            VALUE "ProductName", "dicoding1" "\0"
+            VALUE "OriginalFilename", "lotso_app.exe" "\0"
+            VALUE "ProductName", "lotso_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
