--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lotso_app
+name: lotsoApp
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.0.0
   curved_navigation_bar: ^1.0.6
+  firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.5
+  firebase_auth: ^5.5.3
 
 dev_dependencies:
   flutter_test:
