--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "lotso_app",
-  "short_name": "lotso_app",
+  "name": "lotsoApp",
+  "short_name": "lotsoApp",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
