--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "lotso_app" "\0"
+            VALUE "FileDescription", "lotsoApp" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "lotso_app" "\0"
+            VALUE "InternalName", "lotsoApp" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "lotso_app.exe" "\0"
-            VALUE "ProductName", "lotso_app" "\0"
+            VALUE "OriginalFilename", "lotsoApp.exe" "\0"
+            VALUE "ProductName", "lotsoApp" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
